# mola_test_datasets-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  build-index.sh  debian.store  index.html  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
datasets/g2o/: REAME.md
datasets/kitti/: README.md
datasets/loop_closures/: dataset.yaml  kitti00_000.mm  kitti00_040.mm  kitti02_007.mm  kitti02_033.mm  mulranDCC02_002.mm  mulranDCC02_044.mm
datasets/mulran/: LICENSE  README.md
datasets/radish/: README.md  aces.clf.bz2  aces.rawlog  fr-clinic_robotlaser.clf.bz2  fr-clinic_robotlaser.rawlog  fr079.clf.bz2  fr079.rawlog  intel.clf.bz2  intel.rawlog  mit-csail.clf.bz2  mit-csail.rawlog  mit-killian.rawlog
datasets/ual/: README.md  ual_dataset_2014_05_23_2dlaser_odo.rawlog
debian/: changelog  control  copyright  gbp.conf  rules
rpm/: ros-humble-mola-test-datasets.spec  ros-iron-mola-test-datasets.spec  ros-jazzy-mola-test-datasets.spec  ros-kilted-mola-test-datasets.spec  ros-lyrical-mola-test-datasets.spec  ros-rolling-mola-test-datasets.spec  template.spec
